Fixed issue with email text being too large

--- a/css/btstyle.css
+++ b/css/btstyle.css
@@ -46,6 +46,10 @@ h2.text1 {
     font-size: 21px;
     margin: 50px 0;
 }
+h2.text2 {
+    font-size: 28px;
+    margin: 50px 0;
+}
 
 p.padding {
    padding-left: 15px;
